--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
-  "homepage":"https://nsure-tech.github.io/nsure.network",
+  "homepage":"https://fangyu199.github.io/nsure.network",
   "dependencies": {
     "axios": "^0.19.2",
     "babel-plugin-component": "^1.1.1",
